@@ -1,0 +1,44 @@
+<?php
+
+declare(strict_types=1);
+
+
+namespace XoopsModules\Wglinks;
+
+/*
+ You may not change or alter any portion of this comment or credits
+ of supporting developers from this source code or any supporting source code
+ which is considered copyrighted (c) material of the original comment or credit authors.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+*/
+
+/**
+ * wgBlocks module for xoops
+ *
+ * @copyright    2021 XOOPS Project (https://xoops.org)
+ * @license      GPL 2.0 or later
+ * @package      wgblocks
+ * @since        1.0
+ * @min_xoops    2.5.11 Beta1
+ * @author       Goffy - Wedega.com - Email:webmaster@wedega.com - Website:https://xoops.wedega.com
+ */
+
+/**
+ * Interface  Constants
+ */
+interface Constants
+{
+
+    // Constants for status
+    public const STATUS_OFFLINE = 0;
+    public const STATUS_ONLINE  = 1;
+
+    // Constants for link types
+    public const TYPE_CONTENT = 1;
+    public const TYPE_DIRECT  = 2;
+
+
+}
