@@ -70,6 +70,17 @@ require_once __DIR__ . '/common.php';
 \define('_AM_WGLINKS_LINK_ADDRESS', 'Adresse');
 \define('_AM_WGLINKS_LINK_LOGO', 'Logo');
 \define('_AM_WGLINKS_LINK_STATE', 'State');
+// Clone feature
+\define('_AM_WGLINKS_CLONE', 'Klonen');
+\define('_AM_WGLINKS_CLONE_DSC', 'Ein Modul zu klonen war noch nie so einfach! Geben Sie einfach den Namen den Sie wollen und Knopf drücken!');
+\define('_AM_WGLINKS_CLONE_TITLE', 'Klone %s');
+\define('_AM_WGLINKS_CLONE_NAME', 'Wählen Sie einen Namen für das neue Modul');
+\define('_AM_WGLINKS_CLONE_NAME_DSC', 'Verwenden Sie keine Sonderzeichen ! <br> Wählen Sie bitte kein vorhandenes Modul Modul Verzeichnisname  oder Datenbank-Tabellenname!');
+\define('_AM_WGLINKS_CLONE_INVALIDNAME', 'FEHLER: Ungültige Modulnamen, bitte versuchen Sie einen anderen!');
+\define('_AM_WGLINKS_CLONE_EXISTS', 'FEHLER: Modulnamen bereits benutzt, bitte versuchen Sie einen anderen!');
+\define('_AM_WGLINKS_CLONE_CONGRAT', 'Herzliche Glückwünsche! %s wurde erfolgreich erstellt! <br /> Sie können Änderungen in Sprachdateien machen.');
+\define('_AM_WGLINKS_CLONE_IMAGEFAIL', 'Achtung, wir haben es nicht geschafft, das neue Modul-Logo zu erstellen. Bitte beachten Sie assets / images / logo_module.png manuell zu modifizieren!');
+\define('_AM_WGLINKS_CLONE_FAIL', "Leider konnten wir den neuen Klon nicht erstellen . Vielleicht müssen Sie die Schreibrechte von 'modules' Verzeichnis auf  (CHMOD 777) festlegen und neu versuchen.");
 // General
 \define('_AM_WGLINKS_WEIGHT', 'Reihung');
 \define('_AM_WGLINKS_SUBMITTER', 'Einsender');
