@@ -4,6 +4,9 @@
  - replaced Common/XoopsConfirm by Common/Confirm (mamba/goffy)
  - uninstall with bak-file creation (mamba/goffy)
  - fixed bugs in image upload (goffy)
+ - added clone feature (goffy)
+ - added feedback feature (goffy)
+ - added new icon set (goffy)
 
 <h5>1.07 RC 1  NOT RELEASED</h5>  [2019/../..]
  - fixed bug with missing index.html (cesagonchu/goffy)
